# HardwareVNC

./: .gitignore  CMakeLists.txt  Makefile  README.md  code  configVars.cpp  configVars.h  fps.c  fps.cpp  fps.h  hardwareVncServer.conf  keyboard.c  keyboard.cpp  keyboard.h  mouse.c  mouse.cpp  mouse.h  vncServer.c  vncServer.cpp  webcam.c  webcam.cpp  webcam.h
src/: keyboard.cpp  keyboard.h  mouse.cpp  mouse.h  stdDecls.h  vncServer.cpp  webcam.cpp  webcam.h
templates/: config.yaml  hardwareVncServer.conf
